# WRF_TOOLS

./: .esm-buildbot.yaml  .gitignore  CHANGES  LICENSE  NAMELIST_CREATER.py  README.md  WRF_NAMELIST_CREATOR.py  example.py  pyproject.toml  setup.py
.github/workflows/: python-app.yml
docs/: index.md
examples/: WRF_HELPER.ipynb  run_lef_tcSou.py  run_wps_ecmwf.py  run_wps_ecmwf_EU.py
src/wrf_tools/: __init__.py  executes.py  namelist_creates.py  namelist_inspects.py  tools.py
wrf_Manual/: Chapter 5_ WRF Model.html  README.md
wrf_namelist_creator/: NamelistChecker.py  NamelistCreator.py  Tools.py  WRF_NAMELIST_CREATOR.py  WRF_TOOLS.py  __init__.py  testAll.py  test_all.py  test_requirements.py
