[build-system]
requires = ["setuptools>=55.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WRF_TOOLS_Py"
version = "0.9.0"
authors = [
  { name="Y.-S. Lu", email="hydrogencl@gmail.com"},
]
description = """This tools contains a python module to work on the namelist,
                 which is loosly based on the WRF 4.1.1. 
              """
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hydrogencl/WRF_TOOLS"
"Bug Tracker" = "https://github.com/hydrogencl/WRF_TOOLS/issues"

~     
